# CMakeList.txt: projeto de CMake para ATM, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

project ("ATM")

# Adicione a origem ao executável deste projeto.
add_executable (ATM "ATM.cpp" "ATM.h")

# TODO: Adicione testes e instale destinos, se necessário.
